--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </div>
     </section>
-      <!-- Cards  -->
+    <!-- Cards  -->
     <section>
       <div class="w-[90%] mx-auto grid grid-cols-1 lg:grid-cols-4 ">
         <div class="card bg-base-100 w-96 shadow-xl">
@@ -156,10 +156,10 @@
             <h2 class="card-title">Brand Design</h2>
             <p class="pb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus.</p>
             <div class="card-actions">
-              <button class="">Read More</bu h-30
-                <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
-              </svg>
-              
+              <button class="">Read More</bu h-30 <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+
             </div>
           </div>
         </div>
@@ -215,7 +215,7 @@
               <img src="images/Logos/PHP.png" class="skills-scroll__item h-30 w-auto" alt="PHP">
               <img src="images/Logos/Python.png" class="skills-scroll__item h-30 w-auto" alt="Python">
               <img src="images/Logos/Word excel.png" class="skills-scroll__item h-30 w-auto" alt="Word Excel">
-    
+
               <img src="images/Logos/Figma.png" class="skills-scroll__item h-30 w-auto" alt="Figma">
               <img src="images/Logos/HTML CSS.png" class="skills-scroll__item h-30 w-auto" alt="HTML CSS">
               <img src="images/Logos/JavaScript.png" class="skills-scroll__item h-30 w-auto" alt="JS">
@@ -228,63 +228,79 @@
         </div>
       </div>
     </section>
+    <!-- Contact -->
+    <section class="bg-[#0C4B54] w-full bg-no-repeat">
+      <div class="max-w-[1200px] mx-auto px-2">
+        <div class=" py-6 px-3 md:py-10">
+          <div class="space-y-4 text-center max-w-[650px] mx-auto mb-8">
+            <div class="text-center text-white">
+              <div class="max-w-7xl">
+                <p class="mb-10 text-xl font-medium">Contact<span class="pl-5">———</span></p>
+              </div>
+              <h1 class="text-4xl lg:text-5xl font-bold pb-6">Get in Touch</h1>
+              <p class="text-xl px-2 pb-8">Do you have any project in mind?</p>
+            </div>
+          </div>
+
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <input class="p-4 rounded-lg" type="text" placeholder="First Name*">
+            <input class="p-4 rounded-lg" type="text" placeholder="Last Name*">
+            <input class="p-4 rounded-lg" type="number" placeholder="Phone Number*">
+            <input class="p-4 rounded-lg" type="email" placeholder="Enter Email*">
+            <textarea class="p-4 rounded-[10px] md:col-span-2" rows="8" type="text"
+              placeholder="Write your message here...."></textarea>
+            <button class="md:col-span-2 bg-[#E8F549] text-lg py-3 font-bold rounded-full">Submit
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="bg-[#0C4B54]">
     <div class="max-w-[1200px] mx-auto text-white text-center py-16">
-        <div class="md:space-y-12 space-y-6">
-            <div class="space-y-4 max-w-[670px] mx-auto">
-                <button>
-                  <img src="images/logo yellow.png" alt="">
-                </button>
-                <p class="font-medium px-3 text-gray-300">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti necessitatibus at quia qui inventore praesentium aliquid dignissimos non eos iure?</p>
-            </div>
-            <ul class="md:flex justify-evenly">
-                <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Home</a></li>
-                <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Services</a></li>
-                <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Portfolio</a></li>
-                <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Blogs</a></li>
-                <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Contact</a></li>
-            </ul>
-            <div class="flex gap-10 justify-center">
-              <a>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  class="fill-current">
-                  <path
-                    d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
-                </svg>
-              </a>
-              <a>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  class="fill-current">
-                  <path
-                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
-                </svg>
-              </a>
-              <a>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  class="fill-current">
-                  <path
-                    d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
-                </svg>
-              </a>
-            </div>
-            <p>Copyright © 2024 GitHub/OrnobAadi All right reserved</p>
+      <div class="md:space-y-12 space-y-6">
+        <div class="space-y-4 max-w-[670px] mx-auto">
+          <button>
+            <img src="images/logo yellow.png" alt="">
+          </button>
+          <p class="font-medium px-3 text-gray-300">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti
+            necessitatibus at quia qui inventore praesentium aliquid dignissimos non eos iure?</p>
         </div>
+        <ul class="md:flex justify-evenly">
+          <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Home</a></li>
+          <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Services</a></li>
+          <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Portfolio</a></li>
+          <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Blogs</a></li>
+          <li class="hover:font-semibold hover:text-[#E8F549] mb-8"><a href="">Contact</a></li>
+        </ul>
+        <div class="flex gap-10 justify-center">
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+              <path
+                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
+              </path>
+            </svg>
+          </a>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+              <path
+                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+              </path>
+            </svg>
+          </a>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+              <path
+                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <p>Copyright © 2024 GitHub/OrnobAadi All right reserved</p>
+      </div>
     </div>
-</footer>
+  </footer>
 
 
 </body>
